// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Post /> should render component with uiState prop which value is "loading" 1`] = `
<div>
  <Loading />
</div>
`;

exports[`<Post /> should render initial page 1`] = `
<div>
  <Item
    breadcrumb={Object {}}
    content={Object {}}
  />
</div>
`;
